--- a/src/components/Logo/Logo.css
+++ b/src/components/Logo/Logo.css
@@ -1,8 +1,7 @@
 /* css for the logo component */
 
 .siteLogo{
-    height: 150px;
-    width: 150px;
-    border: red 5px dotted;
+    height: 15vh;
+    /* border: red 5px dotted; */
 }
 
