--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,13 +1,15 @@
 .Header {
+    background-color: cyan;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    height: 150px;
+    height: 15vh;
+    width: 100vw;
     align-items: center;
 }
 
 #header-links {
-    width: 10%;
+    width: 20vw;
     display: flex;
     justify-content: space-around;
 }
