--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,5 +1,5 @@
 .Footer {
-    background-color: aqua;
+    background-color: yellow;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
