--- a/src/components/GameChoice/gameChoice.css
+++ b/src/components/GameChoice/gameChoice.css
@@ -4,6 +4,8 @@
     justify-content: center;
     border-color: black;
     border: dotted;
+    background-color: crimson;
+    margin: 10px;
 }
 
 .GameChoice img {
