--- a/src/components/Games/SlotMachine/slotMachine.css
+++ b/src/components/Games/SlotMachine/slotMachine.css
@@ -31,4 +31,10 @@
 #slot-machine-jackpot{
     animation: flickering .5s infinite;
 }
-
+#start-slot-machine-button{
+    color: white;
+    font-size: 24px;
+    position: absolute;
+    bottom:4.5%;
+    left:10%;
+}
