--- a/src/components/Games/SlotMachine/slotMachine.css
+++ b/src/components/Games/SlotMachine/slotMachine.css
@@ -38,3 +38,32 @@
     bottom:4.5%;
     left:10%;
 }
+
+#wheels-holder{
+    display: flex;
+    flex-direction: row;
+    position:relative;
+}
+
+.Wheel{
+    position:relative;
+    top:26px;
+    left:35px;
+    margin:0;
+    display: flex;
+    flex-direction: column;
+    height:100%;
+    width:30%;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+
+
+.wheel-value{
+    height: 110px;
+    width: 110px;
+    background-size:cover;
+    background-position: center;
+    background-repeat:no-repeat;
+}
