--- a/src/components/Games/SlotMachine/slotMachine.css
+++ b/src/components/Games/SlotMachine/slotMachine.css
@@ -7,7 +7,7 @@
     margin: auto;
     height: 475px;
     width: 500px;
-    background: url("../../../../public/slotmachineimage.png") no-repeat center;
+    background: url("../../../../public/slotMachineImage.png") no-repeat center;
     background-size: cover;
     position:relative;
 }
@@ -41,21 +41,28 @@
 
 #wheels-holder{
     display: flex;
-    flex-direction: row;
-    position:relative;
+    /* flex-direction: row;
+    position:relative; */
 }
 
 .Wheel{
-    position:relative;
+    /* position:relative;
     top:26px;
     left:35px;
     margin:0;
     display: flex;
     flex-direction: column;
-    height:100%;
+    height:10%;
     width:30%;
     justify-content: space-evenly;
-    align-items: center;
+    align-items: center; */
+    position: relative;
+    top: 150px;
+    left: 20px;
+    width: 100%;
+    height: 100px;
+    margin: 5px;
+    overflow: hidden;
 }
 
 
